--- a/addons/music_manager/views/music_manager_artist_views.xml
+++ b/addons/music_manager/views/music_manager_artist_views.xml
@@ -6,5 +6,81 @@
             <field name="res_model">music_manager.artist</field>
             <field name="view_mode">kanban,tree,form</field>
         </record>
+
+        <!-- Kanban view -->
+        <record id="music_manager_artist_view_kanban" model="ir.ui.view">
+            <field name="name">music_manager.view.kanban</field>
+            <field name="model">music_manager.artist</field>
+            <field name="arch" type="xml">
+                <kanban>
+                    <field name="is_favorite"/>
+                    <template>
+                        <t t-name="kanban-box">
+                            <div class="oe_kanban_global_click">
+                                <div class="o_kanban_record_title d-flex flex-row justify-content-between">
+                                    <field name="name"/>
+                                    <button name="set_favorite" type="object" class="oe_stat_button" help="Set favorite">
+                                        <div>
+                                            <i t-if="record.is_favorite.raw_value" class="fa fa-heart text-danger"/>
+                                            <i t-else="" class="fa fa-heart-o"/>
+                                        </div>
+                                    </button>
+                                </div>
+                                <hr class="mb-2"/>
+                                <div class="o_kanban_content d-flex flex-row">
+                                    <div class="oe_kanban_details flex-grow-1">
+                                        <ul>
+                                            <li><i class="fa fa-user me-2" title="User icon"/><field name="real_name"/></li>
+                                            <li t-if="record.birthdate.raw_value"><i class="fa fa-calendar me-2" title="Calendar icon"/><field name="birthdate"/></li>
+                                            <li><i class="fa fa-dot-circle-o me-2" title="Disk icon"/><field name="album_amount"/></li>
+                                            <li><i class="fa fa-music me-2" title="Music icon"/><field name="track_amount"/></li>
+                                        </ul>
+                                    </div>
+                                    <div class="oe_kanban_image d-flex align-items-center justify-content-center" style="height: 125px; width: 100%; overflow: hidden">
+                                        <field name="picture" string="" widget="image" options="{'preview_image': 'picture', 'size': [125]}"/>
+                                    </div>
+                                </div>
+                            </div>
+                        </t>
+                    </template>
+                </kanban>
+            </field>
+        </record>
+
+        <!-- Tree view -->
+
+        <!-- Form view -->
+        <record id="music_manager_artist_view_form" model="ir.ui.view">
+            <field name="name">music_manager.view.form</field>
+            <field name="model">music_manager.artist</field>
+            <field name="arch" type="xml">
+                <form>
+                    <sheet>
+                        <header>
+                            <h1><field name="display_title"/></h1>
+                        </header>
+                        <separator/>
+                        <group>
+                            <group>
+                                <field name="name" string="Name"/>
+                                <field name="real_name" string="Real name"/>
+                                <field name="birthdate" string="Birthdate"/>
+                            </group>
+                            <group>
+                                <field name="picture" string="" class="oe_avatar" widget="image" options="{'preview_image': 'picture'}"/>
+                            </group>
+                        </group>
+                        <notebook>
+                            <page string="Songs">
+                                <field name="track_ids" readonly="True"/>
+                            </page>
+                            <page string="Albums">
+                                <field name="album_ids" readonly="True"/>
+                            </page>
+                        </notebook>
+                    </sheet>
+                </form>
+            </field>
+        </record>
     </data>
 </odoo>
