[UPDATE] views: Added 'track_no' & 'disk_no' as new columns.

--- a/addons/music_manager/views/music_manager_album_views.xml
+++ b/addons/music_manager/views/music_manager_album_views.xml
@@ -45,6 +45,8 @@
                                     <field name="year"/>
                                 </div>
                             </div>
+                            <separator string="Songs"/>
+                            <field name="track_ids"/>
                         </div>
                     </sheet>
                 </form>
