--- a/addons/music_manager/views/music_manager_album_views.xml
+++ b/addons/music_manager/views/music_manager_album_views.xml
@@ -42,9 +42,11 @@
                                 <div class="mx-3" style="border-left: 1px solid #ccc; height: auto;"> </div>
                                 <div class="d-flex flex-column justify-content-between w-100">
                                     <h1 class="form_title"><field name="name"/></h1>
-                                    <field name="year" string="Year" class="w-25"/>
-                                    <field name="album_artist_id" string="Album artist" class="w-25"/>
-                                    <field name="genre_id" string="Genre" class="w-25"/>
+                                    <group class="w-25">
+                                        <field name="year" string="Year"/>
+                                        <field name="album_artist_id" string="Album artist"/>
+                                        <field name="genre_id" string="Genre"/>
+                                    </group>
                                     <button name="update_songs" string="Update metadata" class="btn-outline-primary w-25" type="object"/>
                                 </div>
                             </div>
