--- a/addons/music_manager/views/music_manager_artist_views.xml
+++ b/addons/music_manager/views/music_manager_artist_views.xml
@@ -9,7 +9,7 @@
 
         <!-- Kanban view -->
         <record id="music_manager_artist_view_kanban" model="ir.ui.view">
-            <field name="name">music_manager.view.kanban</field>
+            <field name="name">music_manager.artist.view.kanban</field>
             <field name="model">music_manager.artist</field>
             <field name="arch" type="xml">
                 <kanban>
@@ -49,7 +49,7 @@
 
         <!-- Tree view -->
         <record id="music_manager_artist_view_tree" model="ir.ui.view">
-            <field name="name">music_manager.view.tree</field>
+            <field name="name">music_manager.artist.view.tree</field>
             <field name="model">music_manager.artist</field>
             <field name="arch" type="xml">
                 <tree>
@@ -68,7 +68,7 @@
 
         <!-- Form view -->
         <record id="music_manager_artist_view_form" model="ir.ui.view">
-            <field name="name">music_manager.view.form</field>
+            <field name="name">music_manager.artist.view.form</field>
             <field name="model">music_manager.artist</field>
             <field name="arch" type="xml">
                 <form>
